--- a/my-project-client/package.json
+++ b/my-project-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loading": "^2.0.3",
     "react-scripts": "3.0.1"
   },
   "scripts": {
